Tue Oct 23 19:41:03 EDT 2007	JK Lowden <jklowden@freetds.org>
	* src/tds/net.c src/tds/util.c
	- ct-lib seems OK with EINTR (sqsh works) but db-lib
	- applications get a weird message. 

Tue Oct 23 18:08:00 EDT 2007	JK Lowden <jklowden@freetds.org>
	* src/tds/net.c 
	- return from tds_select as if timed out on EINTR. 
	- sqsh still unhappy when ^C pressed on long-running query. 

Thu Oct 18 16:48:23 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c: fix core

Thu Oct 18 13:49:51 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/query.c src/tds/token.c:
	- more free(NULL)

Tue Oct 16 16:59:06 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/tsql.c src/ctlib/blk.c src/ctlib/cs.c src/ctlib/ct.c:
	* src/dblib/bcp.c src/dblib/dblib.c src/dblib/rpc.c:
	* src/dblib/unittests/rpc.c src/odbc/error.c src/odbc/odbc.c:
	* src/odbc/sql2tds.c src/odbc/unittests/binary_test.c:
	* src/pool/config.c src/tds/locale.c src/tds/login.c:
	* src/tds/mem.c src/tds/query.c src/tds/token.c:
	* src/tds/vstrbuild.c src/tds/unittests/dataread.c:
	- do not check for free(NULL)

Wed Oct 10 13:59:37 EDT 2007	JK Lowden <jklowden@freetds.org>
	* src/apps/tsql.c 
	- added some error checking for malloc/realloc, more needed

Tue Oct 09 13:40:24 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/mem.c: fix small memory leak

Mon Sep 24 13:12:47 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/query.c: limit size preparing queries

Mon Sep 24 12:01:46 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/server/query.c src/server/server.c:
	- small server improve

Thu Sep 20 17:32:15 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/sybdb.h src/dblib/dblib.c src/dblib/dbopen.c:
	- apply constify patch #1786200

Thu Sep 20 17:02:20 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/tsql.c: do not strip empty lines

Mon Sep 17 17:22:32 EDT 2007	JK Lowden <jklowden@freetds.org>